2018-12-04  NIIBE Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (gpg_data_copy): Fix for NR_DO_UIF_SIG.

2018-11-30  NIIBE Yutaka  <gniibe@fsij.org>

	* src/usb-ccid.c (ccid_thread): Fix another race condition.

2018-11-25  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.2.12.

2018-11-21  NIIBE Yutaka  <gniibe@fsij.org>

	* src/usb-ccid.c (ccid_thread): Fix a race condition sending
	result APDU by ack button, time out, sending time extension block
	again while tx_busy=1.

2018-11-17  NIIBE Yutaka  <gniibe@fsij.org>

	* src/main.c (device_initialize_once): Depends on MHZ to
	distinguish GD32F103.
	* src/openpgp-do.c (do_openpgpcard_aid): Ditto.

2018-11-12  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.2.11.

	* chopstx: Update to 1.12.
	* src/configure (ackbtn_support): Always yes.
	* src/usb-ccid.c: Fix comma separator.

2018-11-09  NIIBE Yutaka  <gniibe@fsij.org>

	* tool/kdf_calc.py (kdf_calc): Use libgcrypt.so.20.

2018-11-09  NIIBE Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (cmd_pso, cmd_internal_authenticate): Use
	ccid_comm.

	* src/usb-ccid.c (struct ccid): New field tx_busy.
	(ccid_error, ccid_power_on, ccid_send_status, ccid_power_off)
	(ccid_send_data_block_internal, ccid_send_data_block_0x9000)
	(ccid_send_data_block_gr, ccid_send_params): Set c->tx_busy.
	(ccid_state_p): Remove.
	(ccid_get_ccid_state): New.
	(ccid_thread): Only handle EV_TX_FINISHED event when c->tx_busy.

	* src/usb_ctrl.c (usb_setup, usb_ctrl_write_finish): Use
	ccid_get_ccid_state.
	* src/main.c (display_status_code): Likewise.

2018-11-09  NIIBE Yutaka  <gniibe@fsij.org>

	* src/usb-ccid.c (ccid_handle_data): Set c->state for pinpad input.
	(ccid_send_data_block_internal): Fix the case of len == 0.

	* src/main.c (display_status_code): There is
	no case where ccid_state == CCID_STATE_RECEIVE.
	* src/gnuk.h (CCID_STATE_RECEIVE): Remove.
	(CCID_STATE_SEND): Remove.

2018-10-12  NIIBE Yutaka  <gniibe@fsij.org>

	* src/usb-ccid.c (ccid_thread): Notify host about ack button.
